chore(fixup): update translations text

--- a/conf/locale/es_419/LC_MESSAGES/django.po
+++ b/conf/locale/es_419/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: help-open@uchile.cl\n"
-"POT-Creation-Date: 2025-11-10 18:11+0000\n"
+"POT-Creation-Date: 2025-11-17 13:19+0000\n"
 "PO-Revision-Date: 2022-07-28 20:11+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: es_419\n"
@@ -849,8 +849,8 @@ msgstr ""
 
 #: lms/templates/courseware/course_about.html:92
 #: lms/templates/courseware/course_about.html:119
-msgid "this course is close"
-msgstr "este curso esta cerrao"
+msgid "This course is closed"
+msgstr "Este curso esta cerrado"
 
 #: lms/templates/courseware/course_about.html:99
 #: lms/templates/courseware/course_about.html:126
@@ -889,7 +889,7 @@ msgstr "Datos extra"
 
 #: lms/templates/courseware/course_about.html:285
 msgid "Classes End"
-msgstr "Termino de clases"
+msgstr "Término de clases"
 
 #: lms/templates/courseware/course_about.html:302
 msgid "Enrollment Start"
@@ -897,7 +897,7 @@ msgstr "Inicio de inscripciones"
 
 #: lms/templates/courseware/course_about.html:319
 msgid "Enrollment End"
-msgstr "Termino de inscripciones"
+msgstr "Término de inscripciones"
 
 #: lms/templates/courseware/course_about.html:331
 msgid "There is one session available:"
@@ -971,6 +971,14 @@ msgstr "Categorías"
 #: lms/templates/courseware/courses.html:130
 msgid "Price range"
 msgstr "Rango de precios"
+
+#: lms/templates/courseware/courses.html:137
+msgid "From"
+msgstr "Desde"
+
+#: lms/templates/courseware/courses.html:141
+msgid "To"
+msgstr "Hasta"
 
 #: lms/templates/courseware/courses.html:147
 msgid "Show free events only"
