chore(fixup) : update out of courses change text showing x-x out of x courses

--- a/conf/locale/en/LC_MESSAGES/djangojs.po
+++ b/conf/locale/en/LC_MESSAGES/djangojs.po
@@ -181,7 +181,7 @@ msgid "Showing"
 msgstr ""
 
 #: lms/static/js/open_search.js:230
-msgid "courses out of"
+msgid "out of"
 msgstr ""
 
 #: lms/static/js/open_search.js:232
