--- a/conf/locale/es_419/LC_MESSAGES/djangojs.po
+++ b/conf/locale/es_419/LC_MESSAGES/djangojs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: help-open@uchile.cl\n"
-"POT-Creation-Date: 2025-11-17 14:34+0000\n"
+"POT-Creation-Date: 2025-11-17 21:48+0000\n"
 "PO-Revision-Date: 2022-07-28 20:11+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: es_419\n"
@@ -183,6 +183,10 @@ msgstr "Mostrando"
 #: lms/static/js/open_search.js:230
 msgid "out of"
 msgstr "de"
+
+#: lms/static/js/open_search.js:230
+msgid "courses"
+msgstr "cursos"
 
 #: lms/static/js/open_search.js:232
 msgid "Showing 0 courses"
